Adding new examples.